# personalized-CL-generation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/vector_stores/ai_engineer/: index.faiss  index.pkl
data/vector_stores/data_related/: index.faiss  index.pkl
src/: __init__.py
src/config/: logging_config.py  prompts.py  settings.py
src/core/: __init__.py  chatbot.py  generator.py  vector_store.py
src/ui/: __init__.py  gradio_interface.py
