[project]
name = "personalized-cover-letter-generation"
version = "0.1.0"
description = "AI-powered personalized cover letter generator using resume matching and LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "gradio>=6.5.1",
    "langchain>=1.2.8",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-openai>=1.1.7",
    "openai>=2.16.0",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
]
